feat: dev update moving registration to firebase
